<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingLeft="16dp"
    android:paddingEnd="16dp"
    android:paddingRight="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/feedback_comment_popup_title"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/feedback_comment_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:focusable="true"
        android:gravity="top"
        android:hint="@string/feedback_comment_placeholder"
        android:inputType="textCapSentences|textMultiLine|textAutoCorrect"
        android:lines="4"
        android:paddingBottom="5dp"
        android:textCursorDrawable="@drawable/edittext_cursor"
        android:textSize="@dimen/ui_comment_text_size"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/ui_lollipop_green"/>

        <Button
            android:id="@+id/feedback_button_ok"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/borderless_btn"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/feedback_comment_ok"
            android:textColor="@color/ui_lollipop_green"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/feedback_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_toStartOf="@id/feedback_button_ok"
            android:layout_toLeftOf="@id/feedback_button_ok"
            android:background="@drawable/borderless_btn"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/feedback_comment_cancel"
            android:textColor="@color/ui_lollipop_green"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/feedback_button_clear"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/borderless_btn"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/feedback_comment_clear"
            android:textColor="@color/ui_lollipop_green"
            android:textSize="14sp"/>

    </RelativeLayout>

</LinearLayout>